[gd_scene load_steps=13 format=3 uid="uid://dwxi2ams24m26"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_viow5"]
[ext_resource type="Texture2D" uid="uid://cj608r0fvwv2g" path="res://art/MCAssets/Reticle.png" id="4_nimus"]
[ext_resource type="Texture2D" uid="uid://1seup3hfk5co" path="res://art/MCAssets/FullSheet.png" id="6_jbg3w"]
[ext_resource type="Texture2D" uid="uid://cjpom10gseslg" path="res://art/MCAssets/FullSheetNormals.png" id="7_ubt1b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_53hkq"]
radius = 13.4733
height = 53.3333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4am80"]
radius = 28.0
height = 99.0733

[sub_resource type="CanvasTexture" id="CanvasTexture_k2vg7"]
diffuse_texture = ExtResource("6_jbg3w")
normal_texture = ExtResource("7_ubt1b")

[sub_resource type="Animation" id="Animation_q8mhw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lhkpv"]
resource_name = "dodge"
length = 0.833342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 15, 16, 17, 18, 19, 20, 20, 20]
}

[sub_resource type="Animation" id="Animation_rho7f"]
resource_name = "idle"
length = 1.00002
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_r7glu"]
resource_name = "walk"
length = 1.33335
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o38oo"]
_data = {
"RESET": SubResource("Animation_q8mhw"),
"dodge": SubResource("Animation_lhkpv"),
"idle": SubResource("Animation_rho7f"),
"walk": SubResource("Animation_r7glu")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 129
script = ExtResource("1_viow5")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.85)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_53hkq")

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.66
one_shot = true

[node name="DodgeCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerHurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="HurtboxShape" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2(0, -48.2)
shape = SubResource("CapsuleShape2D_4am80")
debug_color = Color(0, 0.647059, 0.227451, 0.419608)

[node name="FullSpriteSheet" type="Sprite2D" parent="."]
position = Vector2(0, -61.29)
scale = Vector2(0.24, 0.24)
texture = SubResource("CanvasTexture_k2vg7")
hframes = 6
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o38oo")
}

[node name="Head" type="Marker2D" parent="."]
position = Vector2(0, -87.85)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PotionThrowOrigin" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="AimReticle" type="Sprite2D" parent="PotionThrowOrigin"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_nimus")
offset = Vector2(400, 0)

[connection signal="timeout" from="DodgeTimer" to="." method="_on_dodge_timer_timeout"]
[connection signal="timeout" from="DodgeCooldown" to="." method="_on_dodge_cooldown_timeout"]
[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_invulnerable_timeout"]
[connection signal="area_entered" from="PlayerHurtbox" to="." method="_on_hitbox_area_entered"]
